# CoderAgent

./: .env  .gitignore  README.md  Wenhans example.ipynb  groq_example.ipynb  openai_example.ipynb  pyproject.toml
coder_agent/: backend.py  main.py
human_eval/: execution.py
